@@ -71,8 +71,8 @@ class SC_logout {
 
 		$BE_USER->writelog(255,2,0,1,'User %s logged out from TYPO3 Backend',Array($BE_USER->user['username']));	// Logout written to log
 		$BE_USER->logoff();
-
-		$redirectUrl = (t3lib_div::_GP('redirect') ? t3lib_div::_GP('redirect') : 'index.php');
+		$redirect = t3lib_div::sanitizeLocalUrl(t3lib_div::_GP('redirect'));
+		$redirectUrl = $redirect ? $redirect : 'index.php';
 		t3lib_utility_Http::redirect($redirectUrl);
 	}
 }
