@@ -139,7 +139,7 @@ class SC_db_list {
 		$this->search_field = t3lib_div::_GP('search_field');
 		$this->search_levels = t3lib_div::_GP('search_levels');
 		$this->showLimit = t3lib_div::_GP('showLimit');
-		$this->returnUrl = t3lib_div::_GP('returnUrl');
+		$this->returnUrl = t3lib_div::sanitizeLocalUrl(t3lib_div::_GP('returnUrl'));
 
 		$this->clear_cache = t3lib_div::_GP('clear_cache');
 		$this->cmd = t3lib_div::_GP('cmd');
