@@ -122,7 +122,7 @@ class SC_wizard_add {
 
 			// Return if new record as parent (not possibly/allowed)
 		if (!strcmp($this->pid,''))	{
-			t3lib_utility_Http::redirect($this->P['returnUrl']);
+			t3lib_utility_Http::redirect(t3lib_div::sanitizeLocalUrl($this->P['returnUrl']));
 		}
 
 			// Else proceed:
@@ -218,7 +218,7 @@ class SC_wizard_add {
 				}
 			}
 				// Return to the parent alt_doc.php record editing session:
-			t3lib_utility_Http::redirect($this->P['returnUrl']);
+			t3lib_utility_Http::redirect(t3lib_div::sanitizeLocalUrl($this->P['returnUrl']));
 		} else {
 				// Redirecting to alt_doc.php with instructions to create a new record
 				// AND when closing to return back with information about that records ID etc.
