@@ -25,6 +25,7 @@
 	* Fixed bug #14412: Field value added to foreign_table_where by replacing ###REC_FIELD_THE_FIELD_NAME### is not quoted (thanks to Helmut Hummel and Xavier Perseguers)
 	* Fixed bug #14114: Core mailform is open to spam abuse (thanks to Lars Houmark)
 	* Fixed bug #12294: Unchecked URL-Redirect parameter in Front-End logon (thanks to Steffen Kamper and Helmut Hummel)
+	* Fixed bug #13137: redirect/returnUrl isn't validated in core (thanks to Georg Ringer and Marcus Krause)
 
 2010-07-27  Steffen Kamper  <steffen@typo3.org>
 
